--- a/fifteen.ipynb
+++ b/fifteen.ipynb
@@ -28,7 +28,9 @@
    ],
    "source": [
     "for A in range(0,100):\n",
-    "    for x in range()"
+    "    for x in range(0,100):\n",
+    "        if ((x & 29 != 0) <= ((x & 17 == 0) <= (x & A != 0))) == 0:\n",
+    "            "
    ]
   }
  ],
